all types of surveys setupdone, i.e content component done

--- a/frontend/SurveyNow/src/index.css
+++ b/frontend/SurveyNow/src/index.css
@@ -10,7 +10,7 @@
     }
     body{
         background-color: #fff;
-        overflow: hidden;
+        overflow-x: hidden;
     }
 }
 
@@ -26,5 +26,8 @@
     }
     .btn-small {
         @apply flex items-center gap-1 text-xs font-medium bg-primary text-white hover:bg-green-200/60 hover:text-primary rounded px-3 py-[4px]
+    }
+    .icon-btn {
+        @apply text-[20px] text-slate-300 cursor-pointer hover:text-blue-500;
     }
 }
