--- a/frontend/SurveyNow/src/index.css
+++ b/frontend/SurveyNow/src/index.css
@@ -31,4 +31,7 @@
     .icon-btn {
         @apply text-[20px] text-slate-300 cursor-pointer hover:text-green-500
     }
+    .info-text {
+        @apply text-sm text-primary font-medium text-center p-3 bg-gray-100 rounded-lg
+    }
 }
